# biotech-research-ingestion

./: .cursorignore  .gitignore  README.md  biomarkers_snapshot.md  docker-compose.redis.yml  docker-compose.temporal.yml  langgraph.json  main.py  pyproject.toml  pyrightconfig.json  sitecustomize.py  skills-lock.json
.cursor/: AGENTS.md
.cursor/docs/: aws_research_bucket_organization.md
.cursor/langchain_ecosystem_docs/deepagents/: ref_overview.md
.cursor/rules/: async-nonblocking.mdc  fastapi.mdc  uv.mdc
.cursor/specs/: 01-research-findings.md  02-technical-specification.md  03-deep-agent-research-plan.md  03-execution-plan.md  04-execution-plan.md  05-execution-plan.md
data/openai_research_runs/69af4c98cdddd35023237713/: final_response.json  initial_response.json  metadata.json  request.json
docs/: diagnosis-windows-path-and-checkpoint.md
hidden_docs/: AGENT_INTERACTION_MISSION_FILE.md  OBSERVABILITY_AND_EVALUATION_PLAN.md
ops/temporal/dynamicconfig/: development-sql.yaml
skills/source-citation/: SKILL.md
src/: __init__.py  main.py
src/agents/: coordinator.py  native_openai.py  persistence.py
src/agents/tools/: create_plan.py  openai_prebuilt.py  tavily_search_tools.py  web_search.py
src/api/routes/: health.py  internal.py  langchain_dtos.py  missions.py  openai_research.py  plans.py  runs.py  threads.py
src/api/schemas/: common.py  openai_research.py  threads.py
src/api/socketio/: handlers.py  server.py
src/clients/: async_tavily_client.py  langsmith_client.py
src/config/: cors.py  settings.py
src/infrastructure/aws/: async_s3.py
src/infrastructure/neo4j/: neo4j_client.py
src/infrastructure/runtime/: windows_asyncio.py
src/infrastructure/temporal/: client.py  models.py  research_worker.py  worker.py
src/mcp_servers/: playwright_mcp_server.py  proxy_test.py
src/models/: __init__.py  message.py  openai_research.py  plan.py  thread.py
src/prompts/: coordinator_prompt_builders.py
src/prompts/registry/: coordinator_prompts_registry.py
src/research/: __init__.py
src/research/compiler/: agent_compiler.py  mission_compiler_agent.py  (+1 more)
src/services/: coordinator_service.py  openai_research_prompt_builder.py
test_run_files/: openai_research.json
(+581 files in other folders)
