[project]
name = "biotech-research-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.1",
    "boto3>=1.42.63",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langsmith>=0.7.14",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-socketio>=5.16.1",
    "redis>=7.3.0",
    "tavily-python>=0.7.22",
    "uvicorn[standard]>=0.41.0",
]
